--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,9 +7,8 @@
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
+      <button menuClose ion-item (click)="openPage(pages[0])">Sign out</button>
+      <button menuClose ion-item (click)="openPage(pages[1])">Status</button>
     </ion-list>
   </ion-content>
 
