--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,8 +7,7 @@
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item (click)="openPage(pages[0])">Sign out</button>
-      <button menuClose ion-item (click)="openPage(pages[1])">Status</button>
+      <button menuClose ion-item (click)="openPage('Sign out')">Sign out</button>
     </ion-list>
   </ion-content>
 
