--- a/src/pages/status/status.scss
+++ b/src/pages/status/status.scss
@@ -4,4 +4,13 @@ page-status {
     height: 50%;
     width: 100%;
   }
+
+  .fault {
+    color: 'red';
+  }
+
+  .lonlat {
+    color: #999;
+  }
+
 }
