--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,19 @@
 <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title></ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item (click)="openPage('Sign out')">Sign out</button>
+      <ion-item>
+        <button menuClose ion-item (click)="openPage('Sign out')">Sign out</button>
+        <button menuClose ion-item (click)="registerBoat()">Register</button>
+      </ion-item>
+      <ion-item>
+        <button ion-button menuClose>Close</button>
+      </ion-item>
     </ion-list>
   </ion-content>
 
