- Added icons - Clean up - Pages unsubscribiing

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,8 @@
     <ion-list>
       <ion-item>
         <button menuClose ion-item (click)="openPage('Sign out')">Sign out</button>
-        <button menuClose ion-item (click)="registerBoat()">Register</button>
+        <!-- <button menuClose ion-item (click)="registerBoat()">Register Boat</button> -->
+        <button menuClose ion-item>Register Boat</button>
       </ion-item>
       <ion-item>
         <button ion-button menuClose>Close</button>
